--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^3.1.4",
     "postcss": "^8.4.41",
     "postcss-cli": "^11.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.77.8"
   },
   "browserslist": [
